@@ -1,3 +1,13 @@
+Fri Oct 29 03:50:16 BST 2010  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_new): Default ignore_signals to 0.
+	* lib/decompress.c (decompress_open, decompress_fdopen): Remove
+	  redundant calls to pipeline_ignore_signals.
+	* src/man.c (make_browser): Explicitly ignore SIGINT and SIGQUIT
+	  when running the browser.
+	  (make_display_command): Explicitly ignore SIGINT and SIGQUIT when
+	  running the pager.
+
 Fri Oct 29 03:28:57 BST 2010  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.c, lib/pipeline.h: Rename command to pipecmd,
